# ParallelRayTracing

./: CMakeLists.txt  README.md
src/: Ray.h  Source.cpp  Source.h  Sphere.cpp  Sphere.h  camera.cpp  camera.h  geometry.cpp  geometry.h  main.cpp  rayTracer.cpp  rayTracer.h  screen.cpp  screen.h
